--- a/css/style.css
+++ b/css/style.css
@@ -87,14 +87,23 @@ form#form_login  {
     padding-top: 50px;
     text-decoration: underline;
     margin-bottom: 15vh;
-    color: lightblue;
+    color: #fff;
 }
  /*   Links   */
+
+/*ul {
+
+}
+*/
+
+
+
  li {
     padding: 20px;
     list-style: none;
     display: inline-block;
     transition: background 0.3s;
+    
 }
 
 a {
@@ -103,13 +112,13 @@ a {
     font-weight: bold;
     padding: 0.5em;
     align-items: center;
-   
+   color: #fff;
 }
 
 a:link {
 
 border-radius: 8px;
-border: 2px solid lightblue;
+border: 2px solid #fff;
 transition: background 0.3s;
 }
 
@@ -124,6 +133,10 @@ h1#login {
     text-align: center;
     
 }
+
+/*   pesquisar_cnpj   */
+
+
 
 
 
